--- a/config.yaml
+++ b/config.yaml
@@ -3,3 +3,9 @@ redis:
   port: 6379
   db: 0
   password: ""
+rabbitmq:
+  host: localhost
+  port: 5672
+  queue_name: leaderboard
+  username: guest
+  pwd: guest
